fix: typo in docs

--- a/docs/docs/guides/building-chat-app.mdx
+++ b/docs/docs/guides/building-chat-app.mdx
@@ -387,7 +387,7 @@ function ChatScreen() {
 }
 ```
 
-Or play with the code in live mode directly in the broswer:
+Or play with the code in live mode directly in the browser:
 
 <div
   data-snack-id="@kirylziusko/c0b7f0"
