--- a/docs/docs/api/components/keyboard-chat-scroll-view.mdx
+++ b/docs/docs/api/components/keyboard-chat-scroll-view.mdx
@@ -225,5 +225,5 @@ If you're on **Reanimated 4.3.0+**, this flag is enabled by default — no extra
 :::
 
 :::info What it affects?
-If you don't enable this flag you'll see desynchronised keyboard animation on Android/Fabric arhitecture.
+If you don't enable this flag you'll see de-synchronised keyboard animation on Android/Fabric architecture.
 :::
